client/app/taskLists/taskLists.sass
#banner
    border-bottom: none
    margin-top: -20px

    h1
        font-size: 60px
        line-height: 1
        letter-spacing: -1px

.hero-unit
    position: relative
    padding: 30px 15px
    color: #F5F5F5
    text-align: center
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1)
    background: #4393B9

.footer
    text-align: center
    padding: 30px 0
    margin-top: 70px
    border-top: 1px solid #E5E5E5

button + button
    margin-left: 5px

@media (min-width: $screen-lg-min)
    .task-list .actions
        display: none

.task-list .actions

    i:hover
        cursor: pointer

    i
        margin-right: 5px
    
.task-list:hover .actions
    display: block

